--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,5 @@
 <div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <h2>Posts</h2>
-      <ul class="list-group">
-        <app-postlist *ngFor='let post of posts'
-                      [myPost]='post'>
-        </app-postlist>
-      </ul>
-    </div>
-  </div>
+  <app-postlist [myPosts]='posts'>
+  </app-postlist>
 </div>
 
