Mise à jour de la date de création du post au moment de l'ajout dans le template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="container">
-  <app-postlist [myPosts]='posts'>
-  </app-postlist>
+  <app-postlist [myPosts]='posts'></app-postlist>
 </div>
 
