Renommage Ajout du service post Utilisation de subject

--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -2,9 +2,9 @@
   <div class="col-xs-12">
     <h2>Posts</h2>
     <ul class="list-group">
-      <app-postlistitem *ngFor='let post of myPosts'
+      <app-post-list-item *ngFor='let post of posts'
                     [myPost]='post'>
-      </app-postlistitem>
+      </app-post-list-item>
     </ul>
   </div>
 </div>
