--- a/src/app/post-list-item/post-list-item.component.html
+++ b/src/app/post-list-item/post-list-item.component.html
@@ -15,6 +15,7 @@
         <div class="col-xs-12">
             <button class="btn btn-danger" (click)="onDontLove()">Don't love it !</button>
             <button class="btn btn-success" (click)="onLove()">Love it !</button>
+            <button class="btn btn-danger pull-right" (click)="onRemovePost(myPost)">Supprimer post</button>
         </div>
         {{myPost.loveIts}}
     </div>
